# voorvoet_website

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  rxconfig.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
assets/: form-validation.js  robots.txt  site.webmanifest  styles.css
backend/: rxconfig.py
backend/voorvoet_website/: __init__.py  theme.py
documents/: deployment.md  development.md  image_guidelines.md  smpt_server_setup.md
src/: .gitignore  rxconfig.py
src/assets/: styles.css
src/components/: __init__.py  features.py  hero.py  hero_cta.py
src/pages/: __init__.py  home.py  test.py
src/state/: __init__.py  contact_state.py
src/ui/: __init__.py  layout.py  primitives.py
src/voorvoet_website/: theme.py  voorvoet_website.py
tests/: __init__.py  conftest.py  test_routes.py  test_server.py
voorvoet_website/: __init__.py  config.py  theme.py  translations.py  voorvoet_website.py  voorvoet_website_breaking_changes.py
voorvoet_website/blog_content/: 002_alles_over_steunzolen_of_podotherapeutische_zolen.md
voorvoet_website/components/: __init__.py  blog_button.py  blog_card.py  blog_heading.py  blog_image.py  blog_list.py  blog_markdown.py  blog_paragraph.py  button.py  centered_image.py  column.py  container.py  fa_icon.py  form_button.py  form_input.py  form_label.py  form_radio.py  form_select.py  form_textarea.py  header.py  hero_banner.py  icon_list_item.py  image_text_section.py  information_card.py  information_cards_section.py  jumbo_text.py  language_switcher.py  location_map_section.py  markdown_content.py  modal.py  regular_text.py  responsive_grid.py  responsive_image.py  risk_level_card.py  section.py  section_sub_title.py  section_title.py  structured_data.py  sub_title.py  toast.py
voorvoet_website/data/: credits.py
voorvoet_website/models/: __init__.py  blog_post.py  contact_form.py  email_address.py  phone_number.py  post_objects.py  pricing.py  validated_field.py
voorvoet_website/pages/: __init__.py
(+181 files in other folders)
