[project]
name = "voorvoet-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistletoe>=1.5.0",
    "pydantic-settings>=2.11.0",
    "python-frontmatter>=1.1.0",
    "reflex>=0.8.7",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
]
