[project]
name = "voorvoet-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistletoe>=1.5.0",
    "pydantic-settings>=2.11.0",
    "python-frontmatter>=1.1.0",
    "reflex>=0.8.7",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "psutil>=7.1.3",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "ruff>=0.14.7",
    "types-requests>=2.32.4.20250913",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "reflex.*",
    "mistletoe.*",
    "frontmatter.*",
]
ignore_missing_imports = true
